# MPCite

./: .gitignore  LICENSE  README.md  Visualizations.ipynb  activate_conda  bibtex.ipynb  collection_doi.py  cron.sh  data_base_test.py  environment.yml  oldrequirements.txt  pyproject.toml  requirements.txt  run.sh  setup.py  test.py
.github/workflows/: lint.yml  release.yml  testing.yml
files/: config-example.json  config-example.yaml  config2.json  config_prod.json  duplicates_dev.yaml
legacy/: README.md  cron.sh  requirements.txt
legacy/files/: config-example.json
legacy/mpcite/: config_ipynb.txt  doi_builder.py
mpcite/: Untitled.ipynb  Visualizations.ipynb  __init__.py  __main__.py  adapter.py  builder.py  builders.py  cli.py  core.py  data_base_test.py  doi_builder.py  elinktest.py  elvisier_test.py  explorertest.py  main.py  materials_model.py  models.py  mongodb.md  obsolete_builder.py  osti_record.py  pipeline.py  record.py  recordresponse_example.txt  runner.py  send_collection.py  temp.py  test.py  utility.py
mpcite/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Visualizations-checkpoint.ipynb
mpcite_legacy/: __init__.py
scripts/: mpcite  run_mpcite
src/mp_cite/: doi_builder.py  pipeline.py  reset.py  test_core.py
tests/: conftest.py  elink_service_test.py  file_to_jsonForUpload.py  github_bug_report.py  manage_backfills.py  outputs.txt  prod_to_review.py  test_doi_builder.py  test_elink_api.py
